Style changes for job information to include spacing, margin fixes, deleting float capabilities

--- a/app/client/sass/job-information.scss
+++ b/app/client/sass/job-information.scss
@@ -22,8 +22,9 @@
   border-radius: 0.25em;
   color: $ThemeColorFour;
   padding: 0.5em;
-  float: right;
-  padding: 0.5em 2em;
+  padding: 0.65em;
+  width: 100%;
+  font-size: 1.5em;
 }
 
 .apply_here_button {
@@ -122,7 +123,7 @@
     margin: 0em;
     text-align: center;
     font-weight: bold;
-    padding: 1em;
+    padding: 1em 0em;
   }
 }
 
@@ -131,7 +132,7 @@
 }
 
 .foot-image {
-  height: 80px;
+  height: 90px;
   width: 90px;
   transform: rotate(30deg);
 }
